--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.6",
     "@vitejs/plugin-react": "^4.4.1",
     "axios": "^1.9.0",
+    "jwt-decode": "^3.1.2",
     "lucide-react": "^0.509.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
