--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
     "sweetalert2": "^11.21.0",
-    "tailwindcss": "^4.1.6"
+    "tailwindcss": "^4.1.6",
+    "typeface-poppins": "^1.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
