--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
+    "recharts": "^2.15.3",
     "sweetalert2": "^11.21.0",
     "tailwindcss": "^4.1.6",
     "typeface-poppins": "^1.1.13"
